// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post preview should limit the blurb word count 1`] = `
<section
  className="post preview"
>
  <h1>
     
    <a
      href="/dont-panic"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="Don't panic."
      unstyled={true}
    >
      Don't panic.
    </a>
     
  </h1>
  <div
    className="blurb"
  >
    <span
      className="text"
    >
      Earthman Arthur Dent is rescued by his friend, Ford Prefect—an alien researcher for the titular Hitchhiker's Guide to the Galaxy, an enormous work providing information about every planet in the universe—from the Earth just before it is destroyed by the alien Vogons.
    </span>
  </div>
  <div
    className="metadata"
  >
    <div
      className="metadata"
    >
      posted on
       
      <time
        dateTime={"2019-02-01T00:00:00.000Z"}
      >
        Friday, 1 February 2019
      </time>
       
      <span>
        by Clarice Bouwer
      </span>
       
      <span>
        (Est. 1 minute read)
      </span>
    </div>
  </div>
  <div
    className="tags"
  >
     
    <a
      className="tag"
      href="/tag/dont/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="don't"
    >
      don't
    </a>
     
     
    <a
      className="tag"
      href="/tag/panic/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="panic"
    >
      panic
    </a>
     
  </div>
</section>
`;

exports[`Post preview should render when all required props are provided 1`] = `
<section
  className="post preview"
>
  <h1>
     
    <a
      href="/dont-panic"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="Don't panic."
      unstyled={true}
    >
      Don't panic.
    </a>
     
  </h1>
  <div
    className="blurb"
  >
    <span
      className="text"
    >
      Earthman Arthur Dent is rescued by his friend, Ford Prefect—an alien researcher for the titular Hitchhiker's Guide to the Galaxy, an enormous work providing information about every planet in the universe—from the Earth just before it is destroyed by the alien Vogons.
    </span>
  </div>
  <div
    className="metadata"
  >
    <div
      className="metadata"
    >
      posted on
       
      <time
        dateTime={"2019-02-01T00:00:00.000Z"}
      >
        Friday, 1 February 2019
      </time>
       
      <span>
        by Clarice Bouwer
      </span>
       
      <span>
        (Est. 2 minute read)
      </span>
    </div>
  </div>
  <div
    className="tags"
  >
     
    <a
      className="tag"
      href="/tag/dont/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="don't"
    >
      don't
    </a>
     
     
    <a
      className="tag"
      href="/tag/panic/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      title="panic"
    >
      panic
    </a>
     
  </div>
</section>
`;
